--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 
         <dependency>
             <groupId>cglib</groupId>
-            <artifactId>cglib</artifactId>
+            <artifactId>cglib-nodep</artifactId>
             <version>3.2.8</version>
         </dependency>
 
