--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 
         <dependency>
             <groupId>cglib</groupId>
-            <artifactId>cglib-nodep</artifactId>
+            <artifactId>cglib</artifactId>
             <version>3.2.8</version>
         </dependency>
 
@@ -123,7 +123,6 @@
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
                 <artifactId>gmavenplus-plugin</artifactId>
-                <version>1.6.1</version>
                 <executions>
                     <execution>
                         <goals>
